# dotara

./: .env  .gitignore  index.html  package-lock.json  package.json  push.sh  vite.config.js
program/: Cargo.toml
program/src/: lib.rs  solana_io.rs
public/: manifest.json
server/: .env  ecosystem.config.js  index.js  package-lock.json  package.json  test.js
server/game/: Food.js  GameEngine.js  Physics.js  Player.js  RoomManager.js  SpatialGrid.js
server/networking/: BinaryProtocol.js  DeltaCompressor.js
server/routes/: index.js
src/: App.css  App.js  index.css  index.js  polyfills.js
src/components/: Canvas.js  CashOutScreen.css  CashOutScreen.js  Chat.css  Chat.js  CreateGame.css  CreateGame.js  Game.css  Game.js  InterpolationManager.js  JoinGame.css  JoinGame.js  Lobby.css  Lobby.js
src/hooks/: useOptimizedSocket.js
src/utils/: SolanaTransactions.js
