[package]
name = "solana-io"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.17"
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

# Dodatkowe optymalizacje
[profile.release.package."*"]
opt-level = 3

# Specjalne ustawienia dla problematycznych pakietów
[profile.release.package.borsh]
opt-level = "s"

[profile.release.package.core]
opt-level = "s"